--- a/runingtext1.html
+++ b/runingtext1.html
@@ -147,7 +147,7 @@
       <h2>📌 Ketentuan Peserta</h2>
       <ul>
         <li>Peserta wajib mengisi daftar hadir pagi & siang</li>
-        <li>Menjaga ketertiban dan kebersihan ruangan</li>
+        <li>Memakai pakaian celana hitam dan kemeja putih saat pembelajaran</li>
         <li>Istirahat makan siang pukul 12:00 - 13:00</li>
         <li>Sertifikat diberikan setelah seluruh sesi selesai</li>
         <li>Hubungi panitia di meja registrasi untuk informasi lebih lanjut</li>
@@ -168,3 +168,4 @@
 
 </body>
 </html>
+
