--- a/runingtext1.html
+++ b/runingtext1.html
@@ -124,10 +124,7 @@
 
     <!-- Kolom Jadwal -->
     <div class="jadwal">
-      <div class="agenda">
-        <h3>08:00 - 09:00</h3>
-        <p>Registrasi & Pembukaan</p>
-      </div>
+      
       <div class="agenda">
         <h3>09:00 - 12:00</h3>
         <p>Sesi 1: Digitalisasi Layanan Perkantoran</p>
@@ -148,9 +145,9 @@
       <ul>
         <li>Peserta wajib mengisi daftar hadir pagi & siang</li>
         <li>Memakai pakaian celana hitam dan kemeja putih saat pembelajaran</li>
-        <li>Istirahat makan siang pukul 12:00 - 13:00</li>
-        <li>Sertifikat diberikan setelah seluruh sesi selesai</li>
-        <li>Hubungi panitia di meja registrasi untuk informasi lebih lanjut</li>
+        <li>On Kamera Saat Pembelajaran </li>
+        <li>Apabila Meninggalkan Ruang Zoom,Izin Kepada Fasilitator</li>
+        <li>15 Menit Hadir Sebelum Pembelajaran</li>
       </ul>
     </div>
 
@@ -168,4 +165,5 @@
 
 </body>
 </html>
+
 
