--- a/runingtext1.html
+++ b/runingtext1.html
@@ -137,6 +137,10 @@
         <h3>15:15 - 16:30</h3>
         <p>Workshop Interaktif & Tanya Jawab</p>
       </div>
+      <div class="agenda">
+        <h3>Link Tugas Latsar BPOM Angkatan 21</h3>
+        <p>https://bit.ly/TugasLatsarBPOMAngkatan21</p>
+      </div>
     </div>
 
     <!-- Kolom Ketentuan -->
@@ -148,6 +152,7 @@
         <li>On Kamera Saat Pembelajaran </li>
         <li>Apabila Meninggalkan Ruang Zoom,Izin Kepada Fasilitator</li>
         <li>15 Menit Hadir Sebelum Pembelajaran</li>
+            
       </ul>
     </div>
 
@@ -165,5 +170,6 @@
 
 </body>
 </html>
+
 
 
