--- a/runingtext1.html
+++ b/runingtext1.html
@@ -140,6 +140,8 @@
       <div class="agenda">
         <h3>Link Tugas Latsar BPOM Angkatan 21</h3>
         <p>https://bit.ly/TugasLatsarBPOMAngkatan21</p>
+        <a href="https://bit.ly/TugasLatsarBPOMAngkatan21" target="_blank" style="color:#00ccff; text-decoration:none; font-weight:bold;">
+          </a>
       </div>
     </div>
 
@@ -170,6 +172,7 @@
 
 </body>
 </html>
+
 
 
 
