--- a/runingtext1.html
+++ b/runingtext1.html
@@ -141,7 +141,8 @@
         <h3>Link Tugas Latsar BPOM Angkatan 21</h3>
         <p>https://bit.ly/TugasLatsarBPOMAngkatan21</p>
         <a href="https://bit.ly/TugasLatsarBPOMAngkatan21" target="_blank" style="color:#00ccff; text-decoration:none; font-weight:bold;">
-          </a>
+          Link Tugas Latsar BPOM Angkatan 21
+        </a>
       </div>
     </div>
 
@@ -172,6 +173,7 @@
 
 </body>
 </html>
+
 
 
 
