--- a/runingtext1.html
+++ b/runingtext1.html
@@ -165,14 +165,15 @@
   <div class="marquee-container">
     <div class="marquee-text">
       <span>🚨 Harap HP dalam mode senyap selama pelatihan</span>
-      <span>📑 Materi bisa diunduh melalui link yang dibagikan panitia</span>
-      <span>🍵 Coffee break tersedia pukul 10:30 & 15:00</span>
-      <span>🙏 Terima kasih atas partisipasi Bapak/Ibu</span>
+      <span>📑 Materi bisa diunduh melalui link diatas </span>
+      <span>🍵 Coffee break menyesuaikan </span>
+      <span>🙏 Terima kasih atas partisipasi aktif Bapak/Ibu dalam pembelajaran</span>
     </div>
   </div>
 
 </body>
 </html>
+
 
 
 
