--- a/runingtext1.html
+++ b/runingtext1.html
@@ -126,12 +126,11 @@
     <div class="jadwal">
       
       <div class="agenda">
-        <h3>09:00 - 12:00</h3>
-        <p>Sesi 1: Digitalisasi Layanan Perkantoran</p>
+        <h3>15:00 - 16.30 WIB </h3>
+        <p>Pembinaan Sikap dan Prilaku </p>
       </div>
       <div class="agenda">
-        <h3>13:00 - 15:00</h3>
-        <p>Sesi 2: Manajemen Arsip Elektronik</p>
+        
       </div>
       <div class="agenda">
 
@@ -139,8 +138,11 @@
       </div>
       <div class="agenda">
         <h3>
-          <a href="https://bit.ly/TugasLatsarBPOMAngkatan21" target="_blank" style="color:#00ccff; text-decoration:none; font-weight:bold;">
+          <a href="https://formulir.kemdikbud.go.id/view.php?id=4417808" target="_blank" style="color:#00ccff; text-decoration:none; font-weight:bold;">
           Link Tugas Latsar BPOM Angkatan 21
+          </a>
+          <a href="https://bit.ly/TugasLatsarBPOMAngkatan21" target="_blank" style="color:#00ccff; text-decoration:none; font-weight:bold;">
+          Link Presensi Latsar BPOM Angkatan 21
           </a>
         </h3>
       </div>
@@ -173,6 +175,7 @@
 
 </body>
 </html>
+
 
 
 
