--- a/runingtext1.html
+++ b/runingtext1.html
@@ -152,7 +152,7 @@
     <div class="ketentuan">
       <h2>📌 Ketentuan Peserta</h2>
       <ul>
-        <li>Peserta wajib mengisi daftar hadir pagi & siang</li>
+        <li>Peserta wajib mengisi daftar hadir pagi & sore</li>
         <li>Memakai pakaian celana hitam dan kemeja putih saat pembelajaran</li>
         <li>On Kamera Saat Pembelajaran </li>
         <li>Apabila Meninggalkan Ruang Zoom,Izin Kepada Fasilitator</li>
@@ -175,6 +175,7 @@
 
 </body>
 </html>
+
 
 
 
