--- a/runingtext1.html
+++ b/runingtext1.html
@@ -141,9 +141,9 @@
           <a href="https://formulir.kemdikbud.go.id/view.php?id=4417808" target="_blank" style="color:#00ccff; text-decoration:none; font-weight:bold;">
           Link Tugas Latsar BPOM Angkatan 21
           </a>
-          <a href="https://bit.ly/TugasLatsarBPOMAngkatan21" target="_blank" style="color:#00ccff; text-decoration:none; font-weight:bold;">
+          <p><a href="https://bit.ly/TugasLatsarBPOMAngkatan21" target="_blank" style="color:#00ccff; text-decoration:none; font-weight:bold;">
           Link Presensi Latsar BPOM Angkatan 21
-          </a>
+          </a></p>
         </h3>
       </div>
     </div>
@@ -175,6 +175,7 @@
 
 </body>
 </html>
+
 
 
 
