--- a/runingtext1.html
+++ b/runingtext1.html
@@ -133,19 +133,16 @@
         
       </div>
       <div class="agenda">
-
-        
-      </div>
-      <div class="agenda">
-        <h3>
-          <a href="https://formulir.kemdikbud.go.id/view.php?id=4417808" target="_blank" style="color:#00ccff; text-decoration:none; font-weight:bold;">
+      <p><a href="https://formulir.kemdikbud.go.id/view.php?id=4417808" target="_blank" style="color:#00ccff; text-decoration:none; font-weight:bold;">
           Link Tugas Latsar BPOM Angkatan 21
           </a>
+      </p>
+      </div>
+      <div class="agenda">
           <p><a href="https://bit.ly/TugasLatsarBPOMAngkatan21" target="_blank" style="color:#00ccff; text-decoration:none; font-weight:bold;">
           Link Presensi Latsar BPOM Angkatan 21
           </a></p>
-        </h3>
-      </div>
+        </div>
     </div>
 
     <!-- Kolom Ketentuan -->
@@ -175,6 +172,7 @@
 
 </body>
 </html>
+
 
 
 
