--- a/runingtext1.html
+++ b/runingtext1.html
@@ -117,7 +117,7 @@
 <body>
 
   <!-- Judul -->
-  <div class="header">📅 Jadwal & Informasi Pelatihan Hari Ini</div>
+  <div class="header">📅 Jadwal & Informasi Pelatihan </div>
 
   <!-- Isi utama -->
   <div class="main">
@@ -126,11 +126,20 @@
     <div class="jadwal">
       
       <div class="agenda">
-        <h3>15:00 - 16.30 WIB </h3>
-        <p>Pembinaan Sikap dan Prilaku </p>
+        <h3>07:30 - Selesai  </h3>
+        <p>KELOMPOK 1 </p>
+      </div>
+       <div class="agenda">
+        <h3> 09:00 - Selesai </h3>
+        <p>Kelompok 2 </p>
+      </div>
+       <div class="agenda">
+        <h3>Menunggu </h3>
+        <p>Kelompok 3</p>
       </div>
       <div class="agenda">
-        
+        <h3>Menunggu </h3>
+        <p>Kelompok 4</p>
       </div>
       <div class="agenda">
       <p><a href="https://formulir.kemdikbud.go.id/view.php?id=4417808" target="_blank" style="color:#00ccff; text-decoration:none; font-weight:bold;">
@@ -150,7 +159,7 @@
       <h2>📌 Ketentuan Peserta</h2>
       <ul>
         <li>Peserta wajib mengisi daftar hadir pagi & sore</li>
-        <li>Memakai pakaian celana hitam dan kemeja putih saat pembelajaran</li>
+        <li>Memakai pakaian celana panjang hitam dan kemeja putih saat pembelajaran</li>
         <li>On Kamera Saat Pembelajaran </li>
         <li>Apabila Meninggalkan Ruang Zoom,Izin Kepada Fasilitator</li>
         <li>15 Menit Hadir Sebelum Pembelajaran</li>
@@ -164,7 +173,7 @@
   <div class="marquee-container">
     <div class="marquee-text">
       <span>🚨 Harap HP dalam mode senyap selama pelatihan</span>
-      <span>📑 Materi bisa diunduh melalui link diatas </span>
+      <span>📑 Link Pengumpulan Tugas  </span>
       <span>🍵 Coffee break menyesuaikan </span>
       <span>🙏 Terima kasih atas partisipasi aktif Bapak/Ibu dalam pembelajaran</span>
     </div>
@@ -172,6 +181,7 @@
 
 </body>
 </html>
+
 
 
 
