--- a/runingtext1.html
+++ b/runingtext1.html
@@ -126,11 +126,11 @@
     <div class="jadwal">
       
       <div class="agenda">
-        <h3>07:30 - Selesai  </h3>
+        <h3>Sabtu 30 Agustus 07:30 - Selesai  </h3>
         <p>KELOMPOK 1 </p>
       </div>
        <div class="agenda">
-        <h3> 09:00 - Selesai </h3>
+        <h3>Sabtu 30 Agustus 09:00 - Selesai </h3>
         <p>Kelompok 2 </p>
       </div>
        <div class="agenda">
@@ -181,6 +181,7 @@
 
 </body>
 </html>
+
 
 
 
