--- a/runingtext1.html
+++ b/runingtext1.html
@@ -131,15 +131,15 @@
       </div>
        <div class="agenda">
         <h3>Sabtu 30 Agustus 09:00 - Selesai </h3>
-        <p>Kelompok 2 </p>
+        <p>KELOMPOK 2 </p>
       </div>
        <div class="agenda">
         <h3>Menunggu </h3>
-        <p>Kelompok 3</p>
+        <p>KELOMPOK 3</p>
       </div>
       <div class="agenda">
         <h3>Menunggu </h3>
-        <p>Kelompok 4</p>
+        <p>KELOMPOK 4</p>
       </div>
       <div class="agenda">
       <p><a href="https://formulir.kemdikbud.go.id/view.php?id=4417808" target="_blank" style="color:#00ccff; text-decoration:none; font-weight:bold;">
@@ -181,6 +181,7 @@
 
 </body>
 </html>
+
 
 
 
