--- a/runingtext1.html
+++ b/runingtext1.html
@@ -130,7 +130,7 @@
         <p>KELOMPOK 1 </p>
       </div>
        <div class="agenda">
-        <h3>Sabtu 30 Agustus 09:00 - Selesai </h3>
+        <h3>Sabtu 30 Agustus 09:00 - 11.15 WIB </h3>
         <p>KELOMPOK 2 </p>
       </div>
        <div class="agenda">
@@ -181,6 +181,7 @@
 
 </body>
 </html>
+
 
 
 
