--- a/runingtext1.html
+++ b/runingtext1.html
@@ -138,7 +138,7 @@
         <p>KELOMPOK 3</p>
       </div>
       <div class="agenda">
-        <h3>Menunggu </h3>
+        <h3>Sabtu 30 Agustus 07:30 - Selesai   </h3>
         <p>KELOMPOK 4</p>
       </div>
       <div class="agenda">
@@ -181,6 +181,7 @@
 
 </body>
 </html>
+
 
 
 
