--- a/runingtext1.html
+++ b/runingtext1.html
@@ -126,19 +126,19 @@
     <div class="jadwal">
       
       <div class="agenda">
-        <h3>Sabtu 30 Agustus 07:30 - Selesai  </h3>
+        <h3>Kelompok 1 </h3>
         <p>KELOMPOK 1 </p>
       </div>
        <div class="agenda">
-        <h3>Sabtu 30 Agustus 09:00 - 11.15 WIB </h3>
+        <h3>Kelompok 2</h3>
         <p>KELOMPOK 2 </p>
       </div>
        <div class="agenda">
-        <h3>Menunggu </h3>
+        <h3>Kelompo 3 </h3>
         <p>KELOMPOK 3</p>
       </div>
       <div class="agenda">
-        <h3>Sabtu 30 Agustus 07:30 - Selesai   </h3>
+        <h3>Kelompok 4 </h3>
         <p>KELOMPOK 4</p>
       </div>
       <div class="agenda">
@@ -181,6 +181,7 @@
 
 </body>
 </html>
+
 
 
 
