--- a/runingtext1.html
+++ b/runingtext1.html
@@ -166,7 +166,17 @@
             
       </ul>
     </div>
-
+   <div class="ketentuan">
+      <h2>📌 Ketentuan Peserta</h2>
+      <ul>
+        <li>Peserta wajib mengisi daftar hadir pagi & sore</li>
+        <li>Memakai pakaian celana panjang hitam dan kemeja putih saat pembelajaran</li>
+        <li>On Kamera Saat Pembelajaran </li>
+        <li>Apabila Meninggalkan Ruang Zoom,Izin Kepada Fasilitator</li>
+        <li>15 Menit Hadir Sebelum Pembelajaran</li>
+            
+      </ul>
+    </div>
   </div>
 
   <!-- Running Text Bawah -->
@@ -181,6 +191,7 @@
 
 </body>
 </html>
+
 
 
 
