--- a/runingtext1.html
+++ b/runingtext1.html
@@ -156,7 +156,7 @@
 
     <!-- Kolom Ketentuan -->
     <div class="ketentuan">
-      <h2>📌 Ketentuan Peserta</h2>
+      <h2>📅 Jadwal Agenda 2 </h2>
       <ul>
         <li>Peserta wajib mengisi daftar hadir pagi & sore</li>
         <li>Memakai pakaian celana panjang hitam dan kemeja putih saat pembelajaran</li>
@@ -191,6 +191,7 @@
 
 </body>
 </html>
+
 
 
 
