--- a/runingtext1.html
+++ b/runingtext1.html
@@ -169,12 +169,9 @@
    <div class="ketentuan">
       <h2>📌 Ketentuan Peserta</h2>
       <ul>
-        <li>Peserta wajib mengisi daftar hadir pagi & sore</li>
-        <li>Memakai pakaian celana panjang hitam dan kemeja putih saat pembelajaran</li>
-        <li>On Kamera Saat Pembelajaran </li>
-        <li>Apabila Meninggalkan Ruang Zoom,Izin Kepada Fasilitator</li>
-        <li>15 Menit Hadir Sebelum Pembelajaran</li>
-            
+        <li>Selasa </li>
+                 A.
+        B.
       </ul>
     </div>
   </div>
@@ -191,6 +188,7 @@
 
 </body>
 </html>
+
 
 
 
