--- a/runingtext1.html
+++ b/runingtext1.html
@@ -158,20 +158,23 @@
     <div class="ketentuan">
       <h2>📅 Jadwal Agenda 2 </h2>
       <ul>
+        <li>Kelompok 1 </li>
+        <br> Selasa </br>
+        <li>Kelompok 2</li>
+        <li>Kelompok 3</li>
+        <li>Kelompok 4</li>
+                 
+      </ul>
+    </div>
+   <div class="ketentuan">
+      <h2>📌 Ketentuan Peserta</h2>
+      <ul>
         <li>Peserta wajib mengisi daftar hadir pagi & sore</li>
         <li>Memakai pakaian celana panjang hitam dan kemeja putih saat pembelajaran</li>
         <li>On Kamera Saat Pembelajaran </li>
         <li>Apabila Meninggalkan Ruang Zoom,Izin Kepada Fasilitator</li>
         <li>15 Menit Hadir Sebelum Pembelajaran</li>
             
-      </ul>
-    </div>
-   <div class="ketentuan">
-      <h2>📌 Ketentuan Peserta</h2>
-      <ul>
-        <li>Selasa </li>
-                 A.
-        B.
       </ul>
     </div>
   </div>
@@ -188,6 +191,7 @@
 
 </body>
 </html>
+
 
 
 
