--- a/runingtext1.html
+++ b/runingtext1.html
@@ -159,11 +159,21 @@
       <h2>📅 Jadwal Agenda 2 </h2>
       <ul>
         <li>Kelompok 1 </li>
-        <br> Selasa </br>
+        Selasa 2 September Pukul....... <br>
+        Kamis 4 September Pukul....... <br>
+        Senin 8 September Pukul....... <br>
         <li>Kelompok 2</li>
+        Selasa 2 September Pukul....... <br>
+        Kamis 4 September Pukul....... <br>
+        Senin 8 September Pukul....... <br>
         <li>Kelompok 3</li>
+         Selasa 2 September Pukul....... <br>
+        Kamis 4 September Pukul....... <br>
+        Senin 8 September Pukul....... <br>
         <li>Kelompok 4</li>
-                 
+        Selasa 2 September Pukul....... <br>
+        Kamis 4 September Pukul....... <br>
+        Senin 8 September Pukul....... <br>
       </ul>
     </div>
    <div class="ketentuan">
@@ -191,6 +201,7 @@
 
 </body>
 </html>
+
 
 
 
