--- a/runingtext1.html
+++ b/runingtext1.html
@@ -161,7 +161,7 @@
         <li>Kelompok 1 </li>
         Selasa 2 September Pukul....... <br>
         Kamis 4 September Pukul....... <br>
-        Senin 8 September Pukul....... <br>
+        Senin 8 September Pukul....... </br>
         <li>Kelompok 2</li>
         Selasa 2 September Pukul....... <br>
         Kamis 4 September Pukul....... <br>
@@ -201,6 +201,7 @@
 
 </body>
 </html>
+
 
 
 
