--- a/runingtext1.html
+++ b/runingtext1.html
@@ -126,21 +126,9 @@
     <div class="jadwal">
       
       <div class="agenda">
-        <h3>Kelompok 1 </h3>
-        <p>KELOMPOK 1 </p>
-      </div>
-       <div class="agenda">
-        <h3>Kelompok 2</h3>
-        <p>KELOMPOK 2 </p>
-      </div>
-       <div class="agenda">
-        <h3>Kelompo 3 </h3>
-        <p>KELOMPOK 3</p>
-      </div>
-      <div class="agenda">
-        <h3>Kelompok 4 </h3>
-        <p>KELOMPOK 4</p>
-      </div>
+        <h3> Jadwal Kelas Gabungan </h3>
+        <p>.......</p>
+      </div>              
       <div class="agenda">
       <p><a href="https://formulir.kemdikbud.go.id/view.php?id=4417808" target="_blank" style="color:#00ccff; text-decoration:none; font-weight:bold;">
           Link Presensi Latsar BPOM Angkatan 21
@@ -201,6 +189,7 @@
 
 </body>
 </html>
+
 
 
 
