--- a/runingtext1.html
+++ b/runingtext1.html
@@ -149,13 +149,15 @@
         <li>Kelompok 1 </li>
         Selasa 2 September Pukul....... <br>
         Kamis 4 September Pukul....... <br>
-        Senin 8 September Pukul....... </br>
+        Senin 8 September Pukul....... <br>
+        <br>
         <li>Kelompok 2</li>
         Selasa 2 September Pukul....... <br>
         Kamis 4 September Pukul....... <br>
         Senin 8 September Pukul....... <br>
+        </br>
         <li>Kelompok 3</li>
-         Selasa 2 September Pukul....... <br>
+        Selasa 2 September Pukul....... <br>
         Kamis 4 September Pukul....... <br>
         Senin 8 September Pukul....... <br>
         <li>Kelompok 4</li>
@@ -189,6 +191,7 @@
 
 </body>
 </html>
+
 
 
 
