--- a/runingtext1.html
+++ b/runingtext1.html
@@ -147,23 +147,25 @@
       <h2>📅 Jadwal Agenda 2 </h2>
       <ul>
         <li>Kelompok 1 </li>
-        Selasa 2 September Pukul....... <br>
-        Kamis 4 September Pukul....... <br>
-        Senin 8 September Pukul....... <br>
+        Selasa 2 September Pukul ...............<br>
+        Kamis 4 September Pukul................. <br>
+        Senin 8 September Pukul................. <br>
         <br>
         <li>Kelompok 2</li>
-        Selasa 2 September Pukul....... <br>
-        Kamis 4 September Pukul....... <br>
-        Senin 8 September Pukul....... <br>
+        Selasa 2 September Pukul................ <br>
+        Kamis 4 September Pukul................. <br>
+        Senin 8 September Pukul................. <br>
         </br>
         <li>Kelompok 3</li>
-        Selasa 2 September Pukul....... <br>
-        Kamis 4 September Pukul....... <br>
-        Senin 8 September Pukul....... <br>
+        Selasa 2 September Pukul................ <br>
+        Kamis 4 September Pukul................. <br>
+        Senin 8 September Pukul................. <br>
+        <br>
         <li>Kelompok 4</li>
-        Selasa 2 September Pukul....... <br>
-        Kamis 4 September Pukul....... <br>
-        Senin 8 September Pukul....... <br>
+        Selasa 2 September Pukul................ <br>
+        Kamis 4 September Pukul................. <br>
+        Senin 8 September Pukul................. <br>
+        </br>
       </ul>
     </div>
    <div class="ketentuan">
@@ -191,6 +193,7 @@
 
 </body>
 </html>
+
 
 
 
