--- a/runingtext1.html
+++ b/runingtext1.html
@@ -144,7 +144,7 @@
 
     <!-- Kolom Ketentuan -->
     <div class="ketentuan">
-      <h2>📅 Jadwal Agenda 2 </h2>
+      <h2>📅 Jadwal Sinkronus Materi Agenda 2 </h2>
       <ul>
         <li>Kelompok 1 </li>
         Selasa 2 September Pukul ...............<br>
@@ -193,6 +193,7 @@
 
 </body>
 </html>
+
 
 
 
