--- a/runingtext1.html
+++ b/runingtext1.html
@@ -168,6 +168,31 @@
         </br>
       </ul>
     </div>
+        <div class="ketentuan">
+      <h2>📅 Jadwal Sinkronus Materi Agenda 3 </h2>
+      <ul>
+        <li>Kelompok 1 </li>
+        Selasa 8 September Pukul ...............<br>
+        Kamis 9 September Pukul................. <br>
+        Senin 10 September Pukul................. <br>
+        <br>
+        <li>Kelompok 2</li>
+        Selasa 8 September Pukul................ <br>
+        Kamis 9 September Pukul................. <br>
+        Senin 10 September Pukul................. <br>
+        </br>
+        <li>Kelompok 3</li>
+        Selasa 8 September Pukul................ <br>
+        Kamis 9 September Pukul................. <br>
+        Senin 10 September Pukul................. <br>
+        <br>
+        <li>Kelompok 4</li>
+        Selasa 8 September Pukul................ <br>
+        Kamis 9 September Pukul................. <br>
+        Senin 10 September Pukul................. <br>
+        </br>
+      </ul>
+    </div>
    <div class="ketentuan">
       <h2>📌 Ketentuan Peserta</h2>
       <ul>
@@ -193,6 +218,7 @@
 
 </body>
 </html>
+
 
 
 
