--- a/runingtext1.html
+++ b/runingtext1.html
@@ -157,9 +157,9 @@
         Senin 8 September Pukul................. <br>
         </br>
         <li>Kelompok 3</li>
-        Selasa 2 September Pukul................ <br>
-        Kamis 4 September Pukul................. <br>
-        Senin 8 September Pukul................. <br>
+        Selasa 2 September Pukul 10.00-12.15 WIB <br>
+        Kamis 4 September Pukul 09.30-11.45 WIB <br>
+        Senin 8 September Pukul 09.00-16.00 WIB <br>
         <br>
         <li>Kelompok 4</li>
         Selasa 2 September Pukul................ <br>
@@ -218,6 +218,7 @@
 
 </body>
 </html>
+
 
 
 
