--- a/runingtext1.html
+++ b/runingtext1.html
@@ -127,7 +127,11 @@
       
       <div class="agenda">
         <h3> Jadwal Kelas Gabungan </h3>
-        <p>.......</p>
+        <p>
+          Senin 1 September 2025<br>
+          Gladi ASBN Pukul 16.30 WIB <br>
+          KEgiatan ASBN Pukul 19.00 WIB <br>
+        </p>
       </div>              
       <div class="agenda">
       <p><a href="https://formulir.kemdikbud.go.id/view.php?id=4417808" target="_blank" style="color:#00ccff; text-decoration:none; font-weight:bold;">
@@ -218,6 +222,7 @@
 
 </body>
 </html>
+
 
 
 
