--- a/runingtext1.html
+++ b/runingtext1.html
@@ -200,8 +200,8 @@
    <div class="ketentuan">
       <h2>📌 Ketentuan Peserta</h2>
       <ul>
-        <li>Peserta wajib mengisi daftar hadir pagi & sore</li>
-        <li>Memakai pakaian celana panjang hitam dan kemeja putih saat pembelajaran</li>
+        <li>Peserta Wajib Mengisi Daftar Hadir Pagi & Sore Hari</li>
+        <li>Memakai Pakaian Celana Panjang Hitam dan Kemeja Putih saat Pembelajaran</li>
         <li>On Kamera Saat Pembelajaran </li>
         <li>Apabila Meninggalkan Ruang Zoom,Izin Kepada Fasilitator</li>
         <li>15 Menit Hadir Sebelum Pembelajaran</li>
@@ -222,6 +222,7 @@
 
 </body>
 </html>
+
 
 
 
