--- a/runingtext1.html
+++ b/runingtext1.html
@@ -151,14 +151,14 @@
       <h2>📅 Jadwal Sinkronus Materi Agenda 2 </h2>
       <ul>
         <li>Kelompok 1 </li>
-        Selasa 2 September Pukul ...............<br>
-        Kamis 4 September Pukul................. <br>
-        Senin 8 September Pukul................. <br>
+        Selasa 2 September Waktu Tentatif<br>
+        Kamis 4 September Waktu Tentatif <br>
+        Senin 8 September Waktu Tentatif <br>
         <br>
         <li>Kelompok 2</li>
-        Selasa 2 September Pukul................ <br>
-        Kamis 4 September Pukul................. <br>
-        Senin 8 September Pukul................. <br>
+        Selasa 2 September Waktu Tentatif <br>
+        Kamis 4 September Waktu Tentatif <br>
+        Senin 8 September Waktu Tentatif <br>
         </br>
         <li>Kelompok 3</li>
         Selasa 2 September Pkl 10.00-12.15 WIB <br>
@@ -166,9 +166,9 @@
         Senin 8 September Pkl 09.00-16.00 WIB <br>
         <br>
         <li>Kelompok 4</li>
-        Selasa 2 September Pukul................ <br>
-        Kamis 4 September Pukul................. <br>
-        Senin 8 September Pukul................. <br>
+        Selasa 2 September Waktu Tentatif <br>
+        Kamis 4 September Waktu Tentatif <br>
+        Senin 8 September Waktu Tentatif <br>
         </br>
       </ul>
     </div>
@@ -176,24 +176,24 @@
       <h2>📅 Jadwal Sinkronus Materi Agenda 3 </h2>
       <ul>
         <li>Kelompok 1 </li>
-        Selasa 9 September Pukul ...............<br>
-        Kamis 10 September Pukul................. <br>
-        Senin 11 September Pukul................. <br>
+        Selasa 9 September Waktu Tentatif<br>
+        Kamis 10 September Waktu Tentatif <br>
+        Senin 11 September Waktu Tentatif <br>
         <br>
         <li>Kelompok 2</li>
-        Selasa 9 September Pukul................ <br>
-        Kamis 10 September Pukul................. <br>
-        Senin 11 September Pukul................. <br>
+        Selasa 9 September Waktu Tentatif <br>
+        Kamis 10 September Waktu Tentatif <br>
+        Senin 11 September Waktu Tentatif <br>
         </br>
         <li>Kelompok 3</li>
-        Selasa 9 September Pukul................ <br>
-        Kamis 10 September Pukul................. <br>
-        Senin 11 September Pukul................. <br>
+        Selasa 9 September Waktu Tentatif<br>
+        Kamis 10 September Waktu Tentatif <br>
+        Senin 11 September Waktu Tentatif <br>
         <br>
         <li>Kelompok 4</li>
-        Selasa 9 September Pukul................ <br>
-        Kamis 10 September Pukul................. <br>
-        Senin 11 September Pukul................. <br>
+        Selasa 9 September Waktu Tentatif <br>
+        Kamis 10 September Waktu Tentatif <br>
+        Senin 11 September Waktu Tentatif <br>
         </br>
       </ul>
     </div>
@@ -222,6 +222,7 @@
 
 </body>
 </html>
+
 
 
 
