--- a/runingtext1.html
+++ b/runingtext1.html
@@ -197,6 +197,31 @@
         </br>
       </ul>
     </div>
+    <div class="ketentuan">
+      <h2>📅 Jadwal Coaching Rancangan Aktualisasi </h2>
+      <ul>
+        <li>Kelompok 1 </li>
+       Jumat 12 September Coaching Agenda <br>
+        Sabtu 13 September Pembimbingan RA <br>
+        Jumat 19 dan 23 September Pembimbingan RA <br>
+        <br>
+        <li>Kelompok 2</li>
+         Jumat 12 September Coaching Agenda <br>
+        Sabtu 13 September Pembimbingan RA <br>
+        Jumat 19 dan 23 September Pembimbingan RA <br>
+        </br>
+        <li>Kelompok 3</li>
+          Jumat 12 September Coaching Agenda <br>
+        Sabtu 13 September Pembimbingan RA <br>
+        Jumat 19 dan 23 September Pembimbingan RA <br>
+        <br>
+        <li>Kelompok 4</li>
+        Jumat 12 September Coaching Agenda <br>
+        Sabtu 13 September Pembimbingan RA <br>
+        Jumat 19 dan 23 September Pembimbingan RA <br>
+        </br>
+      </ul>
+    </div>
    <div class="ketentuan">
       <h2>📌 Ketentuan Peserta</h2>
       <ul>
@@ -222,6 +247,7 @@
 
 </body>
 </html>
+
 
 
 
