--- a/runingtext1.html
+++ b/runingtext1.html
@@ -172,30 +172,23 @@
         </br>
       </ul>
     </div>
-        <div class="ketentuan">
+     <div class="ketentuan">
       <h2>📅 Jadwal Sinkronus Materi Agenda 3 </h2>
       <ul>
-        <li>Kelompok 1 </li>
+        <li>Kelompok 1 sd 3 </li>
         Selasa 9 September Waktu Tentatif<br>
         Kamis 10 September Waktu Tentatif <br>
         Senin 11 September Waktu Tentatif <br>
         <br>
-        <li>Kelompok 2</li>
-        Selasa 9 September Waktu Tentatif <br>
-        Kamis 10 September Waktu Tentatif <br>
-        Senin 11 September Waktu Tentatif <br>
-        </br>
-        <li>Kelompok 3</li>
+     </ul>
+      <h2>📅 Jadwal Coaching Agenda </h2>
+      <ul>
+        <li>Kelompok 1 sd 3 </li>
         Selasa 9 September Waktu Tentatif<br>
         Kamis 10 September Waktu Tentatif <br>
         Senin 11 September Waktu Tentatif <br>
         <br>
-        <li>Kelompok 4</li>
-        Selasa 9 September Waktu Tentatif <br>
-        Kamis 10 September Waktu Tentatif <br>
-        Senin 11 September Waktu Tentatif <br>
-        </br>
-      </ul>
+     </ul>
     </div>
     <div class="ketentuan">
       <h2>📅 Jadwal Coaching Rancangan Aktualisasi </h2>
@@ -247,6 +240,7 @@
 
 </body>
 </html>
+
 
 
 
