--- a/runingtext1.html
+++ b/runingtext1.html
@@ -181,12 +181,13 @@
         Senin 11 September Waktu Tentatif <br>
         <br>
      </ul>
-      <h2>📅 Jadwal Coaching Agenda </h2>
+      <h2>📅 Jadwal Coaching Agenda dan Pembimbingan Rancangan Aktualisasi </h2>
       <ul>
-        <li>Kelompok 1 sd 3 </li>
+        <li>Kelompok 1 s.d Kelompok 3 </li>
         Jumat 12 September Coaching Agenda <br>
         Sabtu 13 September Pembimbingan RA <br>
-        Jumat 19 dan 23 September Pembimbingan RA <br>
+        Jumat 19 September Pembimbingan RA <br>
+        Selasa 23 September Pembimbingan RA <br>
         <br>
      </ul>
     </div>
@@ -215,6 +216,7 @@
 
 </body>
 </html>
+
 
 
 
