--- a/runingtext1.html
+++ b/runingtext1.html
@@ -175,7 +175,7 @@
      <div class="ketentuan">
       <h2>📅 Jadwal Sinkronus Materi Agenda 3 </h2>
       <ul>
-        <li>Kelompok 1 sd 3 </li>
+        <li>Kelompok 1 s.d Kelompok 3 </li>
         Selasa 9 September Waktu Tentatif<br>
         Kamis 10 September Waktu Tentatif <br>
         Senin 11 September Waktu Tentatif <br>
@@ -216,6 +216,7 @@
 
 </body>
 </html>
+
 
 
 
