--- a/runingtext1.html
+++ b/runingtext1.html
@@ -177,8 +177,8 @@
       <ul>
         <li>Kelompok 1 s.d Kelompok 3 </li>
         Selasa 9 September Waktu Tentatif<br>
-        Kamis 10 September Waktu Tentatif <br>
-        Senin 11 September Waktu Tentatif <br>
+        Rabu 10 September Waktu Tentatif <br>
+        Kamis 11 September Waktu Tentatif <br>
         <br>
      </ul>
       <h2>📅 Jadwal Coaching Agenda dan Pembimbingan Rancangan Aktualisasi </h2>
@@ -216,6 +216,7 @@
 
 </body>
 </html>
+
 
 
 
